--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "cross-env": "^5.2.0",
     "nodemon": "^1.19.1"
+  },
+  "dependencies": {
+    "redis": "^2.8.0"
   }
 }
