--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "Blog-Server",
   "version": "1.0.0",
   "description": "",
-  "main": "bin/www.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=dev nodemon bin/www.js"
+    "dev": "nodemon index"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "mysql": "^2.17.1",
     "redis": "^2.8.0"
   }
 }
